# botorch-mobo-tutorial

./: .gitignore  README.md  main.py  pyproject.toml
docs/ideas/: key-concepts.md  paper-trace-plan.md
notebooks/: step1_single_objective_bo.ipynb  step2_mobo_qnehvi.ipynb  step3_dkl_surrogate.ipynb  step4_al_pipeline.ipynb
