[project]
name = "botorch-mobo-tutorial"
version = "0.1.0"
description = "BoTorch MOBO tutorial: reproducing active learning-enabled multi-objective polymer design"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "botorch",
    "gpytorch",
    "torch",
    "matplotlib",
    "numpy",
    "pandas",
    "jupyter",
    "japanize-matplotlib>=1.1.3",
]
